# CMP2801-Workshop-Tasks

Week 10/: CMakeLists.txt  main.cpp
Week 10/src/: Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h
Week 10/src/Task3/: Animal.cpp  Animal.h  Cow.cpp  Cow.h  Frisian.cpp  Frisian.h  Sheep.cpp  Sheep.h
Week 11/: CMakeLists.txt  main.cpp
Week 11/Task1/: Task1.cpp  Task1.h
Week 11/Task2/: Matrix.h  Task2.cpp  Task2.h
Week 11/Task3/: Task3.h
Week 7/: CMakeLists.txt  main.cpp
Week 7/src/: Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  Task4.cpp  Task4.h  Task5.cpp  Task5.h
Week 8/: CMakeLists.txt  main.cpp
Week 8/src/: Task3.cpp  Task3.h  Task4.cpp  Task4.h  Task5.cpp  Task5.h
Week 9/: CMakeLists.txt  main.cpp
Week 9/src/: Task1.cpp  Task1.h
