cmake_minimum_required(VERSION 3.24)
project(Week_10)

set(CMAKE_CXX_STANDARD 20)

add_executable(Week_10 main.cpp src/Task1.cpp src/Task1.h src/Task2.cpp src/Task2.h src/Task3.cpp src/Task3.h src/Task3/Animal.cpp src/Task3/Animal.h src/Task3/Sheep.cpp src/Task3/Sheep.h src/Task3/Cow.cpp src/Task3/Cow.h src/Task3/Frisian.cpp src/Task3/Frisian.h)
